--- a/style.css
+++ b/style.css
@@ -24,33 +24,130 @@ body {
   background-size: contain;
 }
 
-footer, main, header {
-  margin: 2rem;
+footer, header {
+  padding: 2rem;
+}
+
+header img {
+  height: 2rem;
 }
 
 section {
   margin: 2rem 0;
 }
 
+main {
+  padding: 1rem 2rem;
+  text-align: center;
+}
+main img {
+  margin: 1rem 0;
+}
+main .description {
+  margin-bottom: 0;
+}
+main .description p:nth-of-type(1) {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+main .description p:nth-of-type(2) {
+  margin: 1rem 0.2rem;
+  line-height: 1.6rem;
+}
 main button {
   border-radius: 1.25rem;
   border: none;
+  cursor: pointer;
+  color: #674baf;
+  width: 12.5rem;
+  padding: 0.7rem;
+  font-size: 0.9rem;
+  margin: 0.5rem auto;
+  box-shadow: 0px 5px 3px 3px rgba(0, 0, 0, 0.1);
+}
+main button:hover {
   background-color: #e882e8;
+  color: white;
 }
 
+footer .socials {
+  text-align: center;
+}
+footer .socials ion-icon {
+  padding: 0.4rem;
+  border-radius: 50%;
+  border: 1px solid white;
+  margin: 0.3rem;
+}
 footer .attribution {
   font-size: 11px;
   text-align: center;
 }
 footer .attribution a {
-  color: #3e52a3;
+  color: #e882e8;
 }
 
 @media (min-width: 62.5rem) {
   body {
     background: url(images/bg-desktop.svg), #674baf;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+  }
+
+  header {
+    flex: none;
+    padding: 3rem 3rem 0;
+  }
+  header img {
+    height: 3rem;
+    margin: 0;
+  }
+
+  main {
+    flex: auto;
+    padding: 0 3rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(12.5rem, auto));
+    align-items: center;
+  }
+  main img {
+    margin: 0;
+    width: auto;
+  }
+  main .description {
+    text-align: left;
+    margin: 0;
+    padding: 3rem;
+  }
+  main .description p:nth-of-type(1) {
+    font-size: 2.5rem;
+  }
+  main .description p:nth-of-type(2) {
+    margin: 1rem 0.2rem;
+    line-height: 1.6rem;
+    font-size: 1.1rem;
+  }
+  main button {
+    font-size: 1.1rem;
+    border-radius: 2rem;
+    padding: 1rem;
+    font-weight: 600;
+  }
+
+  footer {
+    flex: none;
+    padding: 0.5rem 3rem;
+    margin: 0;
+  }
+  footer .socials {
+    text-align: right;
+  }
+  footer .socials ion-icon {
+    scale: 1.4;
+    margin: 1rem;
   }
 }
 
