--- a/style.scss
+++ b/style.scss
@@ -29,12 +29,16 @@ body {
     background-size: contain;
 }
 
-%mobile-margin {
-    margin: 2rem;
+%mobile-padding {
+    padding: 2rem;
 }
 
 header {
-    @extend %mobile-margin;
+    @extend %mobile-padding;
+
+    img {
+        height: 2rem;
+    }
 }
 
 section {
@@ -42,17 +46,60 @@ section {
 }
 
 main {
-    @extend %mobile-margin;
+    padding: 1rem 2rem;
+    text-align: center;
+
+    img {
+        margin: 1rem 0;
+    }
+
+    .description {
+        margin-bottom: 0;
+    }
+
+    .description p:nth-of-type(1) {
+        font-family: $font-headings;
+        font-size: 1.5rem;
+        font-weight: 600;
+    }
+
+    .description p:nth-of-type(2) {
+        margin: 1rem 0.2rem;
+        line-height: 1.6rem;
+    }
 
     button {
         border-radius: 1.25rem;
         border: none;
+        cursor: pointer;
+        color: $violet;
+        width: 12.5rem;
+        padding: .7rem;
+        font-size: .9rem;
+        margin: .5rem auto;
+        box-shadow: 0px 5px 3px 3px rgba(0, 0, 0, 0.1);
+        
+    }
+
+    button:hover {
         background-color: $soft-magenta;
+        color: white;
     }
 }
 
 footer {
-    @extend %mobile-margin;
+    @extend %mobile-padding;
+
+    .socials {
+        text-align: center;
+
+        ion-icon {
+            padding: .4rem;
+            border-radius: 50%;
+            border: 1px solid white;
+            margin: .3rem;
+        }
+    }
 
     .attribution {
         font-size: 11px;
@@ -60,7 +107,7 @@ footer {
     }
     
     .attribution a {
-        color: hsl(228, 45%, 44%);
+        color: $soft-magenta;
     }
 }
 
@@ -68,6 +115,70 @@ footer {
     body {
         background: url(images/bg-desktop.svg), $violet;
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover;
+        display: flex;
+        flex-direction: column;
+    }
+
+    header {
+        flex: none;
+        padding: 3rem 3rem 0;
+
+        img {
+            height: 3rem;
+            margin: 0;
+            
+        }
+    }
+
+    main {
+        flex: auto;
+        padding: 0 3rem;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(12.5rem, auto));
+        align-items: center;
+
+        img {
+            margin: 0;
+            width: auto;
+        }
+
+        .description {
+            text-align: left;
+            margin: 0;
+            padding: 3rem;
+        }
+
+        .description p:nth-of-type(1) {
+            font-size: 2.5rem;
+        }
+    
+        .description p:nth-of-type(2) {
+            margin: 1rem 0.2rem;
+            line-height: 1.6rem;
+            font-size: 1.1rem;
+        }
+
+        button {
+            font-size: 1.1rem;
+            border-radius: 2rem;
+            padding: 1rem;
+            font-weight: 600;
+        }
+    }
+
+    footer {
+        flex: none;
+        padding: .5rem 3rem;
+        margin: 0;
+
+        .socials {
+            text-align: right;
+
+            ion-icon {
+                scale: 1.4;
+                margin: 1rem;
+            }
+        }
     }
 }
